# KMEANS_FOR_SYSTEMVUE

./: 171021.wsv
demo_171021/: Configure-for-win64-vs2013.bat
demo_171021/build-win64-vs2013/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  demo_171021.sln
demo_171021/build-win64-vs2013/SystemVue/: INSTALL.vcxproj  INSTALL.vcxproj.filters  SystemVue-demo_171021.vcxproj  SystemVue-demo_171021.vcxproj.filters  Version.rc  cmake_install.cmake  kmeans_in.cpp  kmeans_in.h  kmeans_run.cpp  kmeans_run.h
demo_171021/build-win64-vs2013/SystemVue/Debug/: demo_171021.exp  demo_171021.ilk  demo_171021.lib  in_kmeans.txt  out_kmeans.txt
demo_171021/build-win64-vs2013/SystemVue/SystemVue-demo_171021.dir/Debug/: Version.res
demo_171021/build-win64-vs2013/SystemVue/SystemVue-demo_171021.dir/Debug/SystemVu.97006B80.tlog/: CL.read.1.tlog  CL.write.1.tlog  SystemVue-demo_171021.lastbuildstate  SystemVue-demo_171021.write.1u.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
demo_171021/build-win64-vs2013/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
demo_171021/source/: CMakeLists.txt
demo_171021/source/SystemVue/: CMakeLists.txt  LibraryProperties.cpp
(+3 files in other folders)
